fix overflow bug

--- a/src/styles/components/applicaiton.scss
+++ b/src/styles/components/applicaiton.scss
@@ -7,6 +7,7 @@
   left: 0;
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 
   &:before {
     // content: '';
